==> RBOLDI/kalmanSCC/IMU/BNO080/beunBoardSPI/beunBoardSPI/BNO080.c <==
#include "BNO080.h"
#include "spi.h"
#include <avr/io.h>

uint8_t BNO080waitForSPI(void){
	for (uint8_t counter = 0; counter < 125; counter++)
	{
		if (CheckPinLevel(&PORTA, _INT) == LOW)
		{
			printf("_INT == LOW\n");
			return 1;
		}
		_delay_ms(1);
	}
	//response failed
	printf("SPI INT timeout\n");
	return 0;
}

bool BNO080sendPacket(uint8_t channelNumber, uint8_t dataLength){
	uint8_t packetLength = dataLength + 4; //Add four bytes for the header
	//Wait for BNO080 to indicate it is available for communication
	PORTA.OUTCLR = _WAKE;
	//Check for wake response BNO080
	if(BNO080waitForSPI()) {
		printf("BNO080 is awake!\n");
		//Select the BNO080 and release from wake
		PORTD.OUTCLR = SPI_SS_bm;
		PORTA.OUTSET = _WAKE;
		printf("Host send packet to BNO080\n");
		//Send the 4 byte packet header
		spi_transfer((packetLength & 0xFF));
		spi_transfer((packetLength >> 8));
		spi_transfer(channelNumber);
		spi_transfer((sequenceNumber[channelNumber]++));
		for (uint8_t i = 0; i < dataLength; i++) {
			printf("shtpdata[%d]: %d \n",i, shtpData[i]);
			spi_transfer(shtpData[i]);
			//SPI_MasterTransmitByte(&spiMasterD,shtpData[i]);
		}
		//SPI_MasterSSHigh(ssPort, PIN4_bm);
		PORTD.OUTSET = SPI_SS_bm;
		uint16_t lenght = ((uint16_t) (packetLength >> 8)<< 8 | (packetLength & 0xFF));
		printf("-----Lenght = %d\n", lenght);
		
		return true;
	}
	PORTA.OUTSET = _WAKE;
	return false;
}

void BNO080setFeatureCommand(uint8_t reportID, uint16_t timeBetweenReports, uint32_t specificConfig){
	printf("setFeatureCommand! \n");
	uint32_t microsBetweenReports = (uint32_t)timeBetweenReports * 1000L;
	
	shtpData[0] = SHTP_REPORT_SET_FEATURE_COMMAND;	 //Set feature command. Reference page 55
	shtpData[1] = reportID;							   //Feature Report ID. 0x01 = Accelerometer, 0x05 = Rotation vector
	shtpData[2] = 0;								   //Feature flags
	shtpData[3] = 0;								   //Change sensitivity (LSB)
	shtpData[4] = 0;								   //Change sensitivity (MSB)
	shtpData[5] = (microsBetweenReports >> 0) & 0xFF;  //Report interval (LSB) in microseconds. 0x7A120 = 500ms
	shtpData[6] = (microsBetweenReports >> 8) & 0xFF;  //Report interval
	shtpData[7] = (microsBetweenReports >> 16) & 0xFF; //Report interval
	shtpData[8] = (microsBetweenReports >> 24) & 0xFF; //Report interval (MSB)
	shtpData[9] = 0;								   //Batch Interval (LSB)
	shtpData[10] = 0;								   //Batch Interval
	shtpData[11] = 0;								   //Batch Interval
	shtpData[12] = 0;								   //Batch Interval (MSB)
	shtpData[13] = (specificConfig >> 0) & 0xFF;	   //Sensor-specific config (LSB)
	shtpData[14] = (specificConfig >> 8) & 0xFF;	   //Sensor-specific config
	shtpData[15] = (specificConfig >> 16) & 0xFF;	  //Sensor-specific config
	shtpData[16] = (specificConfig >> 24) & 0xFF;	  //Sensor-specific config (MSB)
	
	//Transmit packet on channel 2, 17 bytes
	BNO080sendPacket(CHANNEL_CONTROL, 17);
}

bool BNO080receivePacket(void){

	if (!BNO080waitForSPI()){
		printf("nothing to receive...\n");
		return false;
	}
	printf("ready to receive!\n");
			
	//SPI_MasterSSLow(ssPort, PIN4_bm);
	PORTD.OUTCLR = SPI_SS_bm;
		
	//Get first four bytes to find out how much data we need to read
	uint8_t packetLSB = spi_transfer(FOO);//SPI_MasterReceiveByte(&spiMasterD);
	uint8_t packetMSB  = spi_transfer(FOO);//SPI_MasterReceiveByte(&spiMasterD);
	uint8_t channelNumber  = spi_transfer(FOO);//SPI_MasterReceiveByte(&spiMasterD);
	uint8_t sequenceNumber  = spi_transfer(FOO);//SPI_MasterReceiveByte(&spiMasterD);
	shtpHeader[0] = packetLSB;
	shtpHeader[1] = packetMSB;
	shtpHeader[2] = channelNumber;
	shtpHeader[3] = sequenceNumber;
	//Calculate the number of data bytes in this packet
	uint16_t dataLength = ((uint16_t)packetMSB << 8 | packetLSB);
	dataLength &= ~(1 << 15); //Clear the MSbit.
	if (dataLength == 0){
		printf("dataLength = 0...\n");
		PORTD.OUTSET = SPI_SS_bm;
		return false; //Packet is empty
	}
	dataLength -= 4; //Remove the header bytes from the data count
	//Read incoming data into the shtpData array
	uint8_t incoming = 0;
	for(uint16_t dataSpot = 0; dataSpot < dataLength; dataSpot++) {
		incoming = spi_transfer(FOO);//SPI_MasterReceiveByte(&spiMasterD);
		if (dataSpot < MAX_PACKET_SIZE) //BNO080 can respond with upto 270 bytes, avoid overflow
			shtpData[dataSpot] = incoming;
	}
	//SPI_MasterSSHigh(ssPort, PIN4_bm); //Release BNO080
	PORTD.OUTSET = SPI_SS_bm;
	printf("SHPT header 1: %d \n", shtpHeader[0]);
	printf("SHPT header 2: %d \n", shtpHeader[1]);
	printf("SHPT header 3: %d \n", shtpHeader[2]);
	printf("SHPT header 4: %d \n", shtpHeader[3]);
	printf("dataLength = %d\n", dataLength);
	return true;
}

void BNO080parseInputReport(void) {
	printf("Parse input report \n");
	//Calculate the number of data bytes in this packet
	int16_t dataLength = ((uint16_t)shtpHeader[1] << 8 | shtpHeader[0]);
	dataLength &= ~(1 << 15); //Clear the MSbit. This bit indicates if this package is a continuation of the last.
	dataLength -= 4; //Remove the header bytes from the data count
	
	timeStamp = ((uint32_t)shtpData[4] << (8 * 3)) | ((uint32_t)shtpData[3] << (8 * 2)) | ((uint32_t)shtpData[2] << (8 * 1)) | ((uint32_t)shtpData[1] << (8 * 0));
	
	uint8_t status = shtpData[5 + 2] & 0x03; //Get status bits
	uint16_t data1 = (uint16_t)shtpData[REPORT_ID_INDEX + 5] << 8 | shtpData[REPORT_ID_INDEX + 4];
	uint16_t data2 = (uint16_t)shtpData[REPORT_ID_INDEX + 7] << 8 | shtpData[REPORT_ID_INDEX + 6];
	uint16_t data3 = (uint16_t)shtpData[REPORT_ID_INDEX + 9] << 8 | shtpData[REPORT_ID_INDEX + 8];
	uint16_t data4 = 0;
	uint16_t data5 = 0;
	
	if (dataLength - 5 > 9)
		data4 = (uint16_t)shtpData[REPORT_ID_INDEX + 11] << 8 | shtpData[REPORT_ID_INDEX + 10];
	if (dataLength - 5 > 11)
		data5 = (uint16_t)shtpData[REPORT_ID_INDEX + 13] << 8 | shtpData[REPORT_ID_INDEX + 12];
	
	//Store these generic values to their proper global variable
	if (shtpData[REPORT_ID_INDEX] == SENSOR_REPORTID_ACCELEROMETER)
	{
		accelAccuracy = status;
		rawAccelX = data1;
		rawAccelY = data2;
		rawAccelZ = data3;
	}
	else if (shtpData[REPORT_ID_INDEX] == SENSOR_REPORTID_LINEAR_ACCELERATION)
	{
		printf("Linear ACC!!\n");
		accelLinAccuracy = status;
		rawLinAccelX = data1;
		rawLinAccelY = data2;
		rawLinAccelZ = data3;
	}
}

void BNO080enableLinearAccelerometer(uint16_t timeBetweenReports){
	printf("Set Linear Accelerometer! \n");
	BNO080setFeatureCommand(SENSOR_REPORTID_LINEAR_ACCELERATION, timeBetweenReports, 0);
}

bool BNO080dataAvailable(void){
	if(!bit_is_clear(PORTA.IN, PIN1_bm))
		return false;
	
	if (BNO080receivePacket() == true)
	{
		printf("Received packet!\n");
		//Check to see if this packet is a sensor reporting its data to us
		if (shtpHeader[2] == CHANNEL_REPORTS && shtpData[0] == SHTP_REPORT_BASE_TIMESTAMP){
			BNO080parseInputReport();
			printf("Data available!\n");
			return (true);
		}
		else if (shtpHeader[2] == CHANNEL_CONTROL)
		{
			BNO080parseCommandReport(); //This will update responses to commands, calibrationStatus, etc.
			return (true);
		}
	}
	return false;
}

float BNO080getLinAccelX(void) {
	float accel = qToFloat(rawLinAccelX, linear_accelerometer_Q1);
	return (accel);
}

float BNO080getLinAccelY(void)
{
	float accel = qToFloat(rawLinAccelY, linear_accelerometer_Q1);
	return (accel);
}

float BNO080getLinAccelZ(void)
{
	float accel = qToFloat(rawLinAccelZ, linear_accelerometer_Q1);
	return (accel);
}
